--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>logback-classic</artifactId>
             <version>1.4.11</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.4.11</version>
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
